Fix overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -63,6 +63,7 @@ footer {
   width: 500px;
   right: -510px;
   transition: 0.3s ease-in-out;
+  height: 100vh;
 
   &.active {
     right: 0;
