--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -1,6 +1,14 @@
+.cart-window {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 header {
   padding: 10px;
   display: flex;
+  flex: 0;
   justify-content: flex-end;
 
   img {
@@ -16,6 +24,7 @@ header {
   padding: 30px;
   display: flex;
   flex-direction: column;
+  flex: 1;
 }
 
 .cart-title-wrap {
@@ -29,6 +38,17 @@ header {
 }
 
 .items-wrap {
+  max-height: 60vh;
+  overflow-y: scroll;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+}
+
+.item-wrap {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -129,6 +149,9 @@ header {
   }
 
   .items-wrap {
+    height: 40%;
+  }
+  .item-wrap {
     height: 140px;
 
     img {
